front_end/panels/timeline/timelinePanel.css
/* ... */
#timeline-overview-grid {
  background-color: var(--sys-color-cdt-base-container);
}

#timeline-overview-grid .timeline-grid-header {
  height: 12px;
}

#timeline-overview-grid .resources-dividers-label-bar {
  pointer-events: auto;
  height: 12px;
}

#timeline-overview-grid .resources-divider-label {
  top: 1px;
}

.timeline-details-split {
  flex: auto;
}

.timeline.panel .status-pane-container {
  z-index: 1000;
  display: flex;
  align-items: center;
  pointer-events: none;
}

.timeline.panel .status-pane-container.tinted {
  background-color: var(--sys-color-cdt-base-container);
  pointer-events: auto;
}

.timeline-landing-page.legacy > div > p {
  flex: none;
  white-space: pre-line;
  line-height: 18px;
}

.popover ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

#memory-graphs-canvas-container {
  overflow: hidden;
  flex: auto;
  position: relative;

  .no-events-found {
    position: absolute;
    font: var(--sys-typescale-body4-regular);
    left: var(--sys-size-5);
    bottom: var(--sys-size-5);

    p {
      margin: 0;
    }
  }
}

#memory-counters-graph {
  flex: auto;
}

#memory-graphs-canvas-container .memory-counter-marker {
  position: absolute;
  border-radius: 3px;
  width: 5px;
  height: 5px;
  margin-left: -3px;
  margin-top: -2px;
}

#memory-graphs-container .timeline-memory-header {
  flex: 0 0 26px;
  background-color: var(--sys-color-surface2);
  border-bottom: 1px solid var(--sys-color-divider);
  justify-content: space-between;
}

#memory-graphs-container .timeline-memory-header::after {
  content: "";
  background-image: var(--image-file-toolbarResizerVertical);
  background-repeat: no-repeat;
  background-position: right center, center;
  flex: 20px 0 0;
  margin: 0 4px;
}

.timeline-memory-toolbar {
  flex-shrink: 1;
}

.memory-counter-value {
  margin: 8px;
}

#counter-values-bar {
  flex: 0 0 20px;
  border-top: solid 1px var(--sys-color-divider);
  width: 100%;
  overflow: hidden;
  line-height: 18px;
}

.timeline-details {
  vertical-align: top;
}

.timeline-details-view {
  color: var(--sys-color-on-surface);
  overflow: hidden;
}

.timeline-details-view-body {
  flex: auto;
  overflow: auto;
  position: relative;
  background-color: var(--sys-color-cdt-base-container);
  user-select: text;
  display: block;
}

.timeline-details-view-block {
  flex: none;
  display: flex;
  background-color: var(--sys-color-cdt-base-container);
  flex-direction: column;
  padding-bottom: 5px;
  border-bottom: 1px solid var(--sys-color-divider);
}

.timeline-details-view-row {
  padding-left: 10px;
  min-height: 20px;
}

.timeline-details-view-block .timeline-details-stack-values {
  flex-direction: column !important; /* stylelint-disable-line declaration-no-important */
}

.timeline-details-chip-title {
  font-size: 12px;
  padding: 8px;
  display: flex;
  align-items: center;
}

.timeline-details-view-block:first-child > .timeline-details-chip-title {
  font-size: 13px;
}

.timeline-details-view-row-title:not(:empty) {
  color: var(--sys-color-token-subtle);
  overflow: hidden;
  padding-right: 10px;
  display: inline-block;
  vertical-align: top;
}

.timeline-details-warning {
  --override-details-warning-background-color: rgb(250 209 209 / 48%);

  background-color: var(--override-details-warning-background-color);
}

.theme-with-dark-background .timeline-details-warning,
:host-context(.theme-with-dark-background) .timeline-details-warning {
  --override-details-warning-background-color: rgb(87 10 10 / 48%);
}

.timeline-details-warning .timeline-details-view-row-title {
  color: var(--sys-color-error);
}

.timeline-details-view-row-value {
  display: inline-block;
  user-select: text;
  text-overflow: ellipsis;
  overflow: hidden;
  padding: 0 3px;
}

.timeline-details-warning .timeline-details-view-row-value {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.timeline-details-view-pie-chart-wrapper {
  margin: 4px 0;
}

.timeline-details-view-pie-chart {
  margin-top: 5px;
}

.timeline-flamechart {
  overflow: hidden;
}

.brick-game {
  background-color: var(--sys-color-neutral-container);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9999; /* A high value to ensure it's on top */
}

.game-close-button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 25px;
  height: 25px;
  position: absolute;
  right: 15px;
  top: 15px;
  border-radius: 50%;
  cursor: pointer;
}

.scorePanel {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  white-space: pre-line;
  padding: 15px;
  position: absolute;
  left: 15px;
  bottom: 15px;
  border: double 7px transparent;
  border-radius: 20px;
  background-origin: border-box;
  background-clip: content-box, border-box;
  font-weight: 200;
}

.confetti-100 {
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.confetti-100 > .confetti-100-particle {
  opacity: 0%;
  position: fixed;
  animation: confetti-100-animation 1s none ease-out;
  font-size: 30px;
}

@keyframes confetti-100-animation {
  0% {
    opacity: 100%;
    transform: translateY(0%) translateY(0%) rotate(0deg);
  }

  100% {
    opacity: 0%;
    transform: translateY(var(--to-Y)) translateX(var(--to-X)) rotate(var(--rotation));
  }
}

@media (prefers-reduced-motion) {
  .confetti-100 > .confetti-100-particle {
    animation-name: dissolve;
  }
}

.timeline-flamechart-resizer {
  flex: 8px 0 0;
  background-color: var(--sys-color-surface2);
  border: 1px var(--sys-color-divider);
  border-style: solid none;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: center;
}

.timeline-network-resizer-disabled > .timeline-flamechart-resizer {
  display: none;
}

.timeline-flamechart-resizer::after {
  content: "...";
  font-size: 14px;
  margin-bottom: -1px;
}

.timeline-layers-view-properties table {
  width: 100%;
  border-collapse: collapse;
}
/* ... */

