[RPP] Fix cropped button focus in Details view.
The `text-overflow` and `overflow` properties on this CSS selector have
been ineffective anyways (by now) for what they probably originally were
supposed to do. But at the same time, the `overflow: hidden` was causing
the button focus to appear cropped.

Fixed: 378810125
Screenshot: https://i.imgur.com/3shR8Ro.png
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6038155
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -233,8 +233,6 @@
 .timeline-details-view-row-value {
   display: inline-block;
   user-select: text;
-  text-overflow: ellipsis;
-  overflow: hidden;
   padding: 0 3px;
 }
 
